syntax = "proto3";

package helloworld;
// 定义 Greeter 服务
service Greeter{
    //发送一个greeter
    rpc SayHello (HelloRequest) returns (HelloReply){}
    rpc SayBye (stream HelloRequest) returns (stream HelloReply){}
}

message HelloRequest{
    string Name = 1;
}

message HelloReply{
    string Message = 1;
}
